--- a/generate.ipynb
+++ b/generate.ipynb
@@ -352,91 +352,91 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 4.9371e-06, -5.1171e-05, -2.1304e-05,  ...,  2.0284e-05,\n",
-       "            7.7362e-06,  5.5144e-05],\n",
-       "          [-5.1741e-05,  3.6856e-07,  6.8910e-06,  ...,  8.8265e-01,\n",
-       "            1.2050e-05,  5.7907e-06],\n",
-       "          [ 1.9807e-05, -4.0294e-05, -6.8114e-06,  ..., -4.5178e-05,\n",
-       "           -1.1821e-05,  1.7543e-05],\n",
+       "tensor([[[[ 4.0844e-05, -3.0700e-05,  3.6681e-05,  ..., -1.4597e-05,\n",
+       "           -4.9732e-05,  4.4859e-05],\n",
+       "          [ 7.3042e-06, -3.2018e-05, -6.1201e-06,  ...,  8.8099e-06,\n",
+       "           -4.4160e-05,  2.4237e-06],\n",
+       "          [ 5.5243e-05,  5.8542e-05, -5.3747e-06,  ...,  7.8748e-06,\n",
+       "            1.8017e-05, -1.3857e-05],\n",
        "          ...,\n",
-       "          [-5.9675e-05, -2.0405e-01, -1.8700e-06,  ...,  2.0779e-05,\n",
-       "           -4.7394e-05,  2.4239e-05],\n",
-       "          [-1.3129e-05,  5.4388e-05,  5.0859e-05,  ..., -3.1299e-01,\n",
-       "           -2.1312e-05, -4.3855e-05],\n",
-       "          [-5.0672e-05,  2.7509e-05,  4.7399e-05,  ...,  2.0976e-05,\n",
-       "           -3.2823e-06,  8.4228e-06]],\n",
+       "          [ 5.6919e-05,  5.2440e-05,  6.0577e-05,  ..., -6.6900e-06,\n",
+       "           -2.8678e-05, -4.9574e-05],\n",
+       "          [ 2.0480e-05, -3.7644e-05, -5.3792e-05,  ...,  2.4722e-05,\n",
+       "            4.3521e-05, -2.0962e-05],\n",
+       "          [ 2.5345e-05, -4.5527e-05,  1.5314e-05,  ..., -4.6717e-05,\n",
+       "            5.1577e-05, -5.8620e-05]],\n",
        "\n",
-       "         [[ 2.0446e-05,  3.3614e-05, -6.7046e-06,  ...,  6.0452e-07,\n",
-       "           -4.9874e-05,  5.8266e-05],\n",
-       "          [-4.2385e-05,  2.8670e-05,  6.1576e-07,  ...,  1.3209e+00,\n",
-       "            4.7583e-05, -4.0922e-05],\n",
-       "          [ 2.3981e-05,  2.2326e-05, -5.4832e-05,  ..., -2.1916e-05,\n",
-       "            1.4548e-05, -4.4118e-05],\n",
+       "         [[ 3.8280e-05,  5.4798e-05,  2.4109e-05,  ..., -4.1992e-05,\n",
+       "            3.1731e-05, -3.1132e-05],\n",
+       "          [ 2.6099e-05, -1.0279e-06,  8.6275e-07,  ...,  1.5192e-05,\n",
+       "           -5.6242e-05,  3.6846e-05],\n",
+       "          [ 2.4202e-05,  5.1277e-05,  5.5697e-06,  ...,  5.8037e-05,\n",
+       "           -3.4898e-05,  4.1430e-05],\n",
        "          ...,\n",
-       "          [ 1.1808e-05,  8.3098e-02,  2.8994e-05,  ..., -4.0463e-05,\n",
-       "           -1.3908e-05, -5.8378e-05],\n",
-       "          [-6.3719e-07, -7.3495e-06, -6.0141e-05,  ...,  1.5997e-01,\n",
-       "            5.5353e-07,  2.9766e-05],\n",
-       "          [ 2.3295e-06, -5.9522e-05, -1.8291e-05,  ...,  4.4476e-05,\n",
-       "            3.6933e-05, -2.8416e-05]],\n",
+       "          [ 6.7014e-07,  3.2395e-05,  2.2246e-05,  ..., -5.5274e-06,\n",
+       "            3.1146e-05, -5.1259e-05],\n",
+       "          [-4.2676e-05,  3.7257e-05, -3.4587e-05,  ...,  4.0887e-06,\n",
+       "            2.6703e-05,  4.0126e-05],\n",
+       "          [ 2.0692e-05,  3.7589e-05,  4.2962e-05,  ...,  2.2804e-06,\n",
+       "            3.1269e-05,  1.1865e-05]],\n",
        "\n",
-       "         [[-2.4473e-06, -3.8224e-05,  3.7504e-05,  ..., -2.5178e-05,\n",
-       "           -5.9761e-05, -3.6288e-05],\n",
-       "          [-2.6809e-05,  3.1806e-06, -2.0770e-05,  ..., -4.7471e-01,\n",
-       "           -5.8306e-05,  2.2697e-05],\n",
-       "          [-1.7976e-05,  2.5755e-05,  5.9529e-05,  ..., -4.1613e-05,\n",
-       "            2.6418e-05, -4.0428e-05],\n",
+       "         [[-1.6471e-05,  7.9307e-06, -5.6620e-05,  ..., -1.4056e-05,\n",
+       "            3.7680e-05, -3.1432e-05],\n",
+       "          [ 1.7923e-05,  2.9251e-05,  4.5843e-05,  ...,  2.7409e-05,\n",
+       "            5.7961e-06,  2.0942e-05],\n",
+       "          [-6.3098e-06, -3.1192e-05, -2.9744e-05,  ..., -2.0715e-05,\n",
+       "           -1.0366e-05,  3.9565e-05],\n",
        "          ...,\n",
-       "          [-3.6672e-05, -1.6064e-01,  5.7358e-05,  ...,  1.5995e-05,\n",
-       "           -2.7331e-05, -4.2602e-05],\n",
-       "          [ 4.5486e-05,  1.3675e-05,  4.0618e-05,  ..., -6.2850e-02,\n",
-       "            2.9685e-05,  1.2207e-05],\n",
-       "          [ 3.7930e-05, -1.1368e-07,  4.2047e-05,  ...,  4.3643e-05,\n",
-       "           -1.7195e-05,  7.4669e-06]],\n",
+       "          [-5.3403e-05, -8.8607e-06, -3.3365e-05,  ..., -3.9860e-05,\n",
+       "            4.2481e-05, -1.1206e-05],\n",
+       "          [ 4.0998e-05,  1.9126e-06, -5.6555e-05,  ..., -4.8947e-05,\n",
+       "            1.6735e-05,  2.4429e-06],\n",
+       "          [ 5.5947e-05,  5.0946e-05,  1.1244e-06,  ...,  2.1276e-05,\n",
+       "            4.2988e-05, -4.6883e-05]],\n",
        "\n",
        "         ...,\n",
        "\n",
-       "         [[-4.6439e-05, -2.7989e-06, -3.3467e-05,  ...,  3.2970e-05,\n",
-       "            3.8867e-06,  4.3403e-05],\n",
-       "          [ 5.7252e-05,  5.0197e-05, -4.8513e-05,  ...,  7.2940e-01,\n",
-       "           -5.5840e-05, -5.4652e-06],\n",
-       "          [ 2.9031e-05, -5.9489e-05,  2.5530e-05,  ..., -7.3725e-06,\n",
-       "           -3.4627e-05, -2.0807e-05],\n",
+       "         [[-5.2319e-05, -4.4272e-05,  5.5070e-06,  ..., -6.0128e-05,\n",
+       "            2.9416e-05, -7.0447e-06],\n",
+       "          [-3.2700e-05, -8.6984e-06, -2.7575e-05,  ...,  1.6402e-05,\n",
+       "            3.6688e-06,  4.2168e-05],\n",
+       "          [ 4.1926e-05, -1.4823e-05,  4.0228e-05,  ...,  1.3899e-05,\n",
+       "            5.3766e-05,  4.1271e-05],\n",
        "          ...,\n",
-       "          [-9.3847e-06, -3.2929e-02,  1.8267e-06,  ..., -5.1095e-05,\n",
-       "           -4.5706e-05,  4.1164e-05],\n",
-       "          [-5.3331e-05, -7.1712e-06, -1.1945e-05,  ..., -2.6538e-01,\n",
-       "           -5.9451e-05,  1.5503e-05],\n",
-       "          [ 5.7422e-06, -1.9324e-05,  3.9716e-05,  ..., -4.6539e-05,\n",
-       "           -1.9510e-05, -5.9858e-05]],\n",
+       "          [ 5.0101e-05, -1.9390e-05,  2.7946e-05,  ..., -3.6138e-06,\n",
+       "           -4.0352e-05, -3.2330e-05],\n",
+       "          [-2.5860e-05,  2.3328e-05,  5.3359e-05,  ..., -1.1025e-05,\n",
+       "            3.8669e-05, -5.1355e-05],\n",
+       "          [-4.5696e-05,  3.9434e-05, -2.4928e-06,  ..., -1.7935e-05,\n",
+       "           -4.0833e-05, -2.6249e-05]],\n",
        "\n",
-       "         [[ 2.5985e-05,  3.8177e-05, -5.9998e-05,  ..., -2.8551e-05,\n",
-       "           -6.0589e-05,  1.3838e-05],\n",
-       "          [-5.0306e-05,  5.0655e-05, -4.0093e-05,  ..., -5.2096e-01,\n",
-       "            5.3177e-05,  2.7329e-05],\n",
-       "          [ 5.0279e-05,  4.5933e-05, -2.3239e-05,  ..., -4.2019e-05,\n",
-       "           -1.0492e-05, -5.6893e-05],\n",
+       "         [[ 5.9240e-05, -1.1521e-05, -1.8373e-05,  ..., -4.3500e-06,\n",
+       "           -2.1946e-05, -2.6204e-05],\n",
+       "          [-5.6034e-05, -2.8430e-05, -6.0891e-05,  ..., -5.7285e-05,\n",
+       "           -2.0837e-05, -1.0567e-05],\n",
+       "          [-9.7070e-06,  2.1763e-05, -3.7237e-05,  ...,  7.3775e-06,\n",
+       "            1.5890e-05,  5.1043e-05],\n",
        "          ...,\n",
-       "          [ 8.8142e-06, -1.3349e-01,  1.5935e-05,  ...,  5.0020e-05,\n",
-       "            1.7368e-05,  1.4382e-05],\n",
-       "          [ 2.4072e-05, -1.0720e-06, -1.5192e-08,  ...,  4.0109e-02,\n",
-       "           -4.1616e-05, -3.8876e-05],\n",
-       "          [ 1.9519e-05, -1.2261e-05, -1.7843e-05,  ..., -4.8856e-06,\n",
-       "           -3.0035e-05,  1.1578e-05]],\n",
+       "          [ 2.6196e-05, -2.7637e-05, -2.2202e-05,  ..., -7.1681e-06,\n",
+       "           -5.8110e-05,  5.8623e-05],\n",
+       "          [-5.6694e-05,  4.6586e-05,  1.9196e-05,  ...,  8.4646e-06,\n",
+       "            3.4281e-05, -4.4814e-05],\n",
+       "          [-4.7452e-05,  4.3243e-05,  1.0067e-05,  ..., -6.0466e-05,\n",
+       "            2.9770e-05, -5.1165e-05]],\n",
        "\n",
-       "         [[-7.1393e-06, -4.8195e-05,  3.5518e-05,  ..., -5.4443e-05,\n",
-       "           -1.2319e-05, -5.0741e-05],\n",
-       "          [ 1.6639e-05, -5.0815e-05, -1.4035e-05,  ..., -2.5962e+00,\n",
-       "           -1.8607e-05, -5.3588e-05],\n",
-       "          [-1.0268e-05, -1.2911e-05,  5.6263e-06,  ..., -5.9498e-05,\n",
-       "            5.3220e-05,  3.6919e-05],\n",
+       "         [[ 4.2232e-05, -2.9578e-05, -2.2073e-05,  ..., -2.2671e-05,\n",
+       "            4.2470e-05, -7.0832e-06],\n",
+       "          [-3.1801e-07,  3.2369e-05,  2.4629e-05,  ...,  5.4469e-05,\n",
+       "            4.2078e-05,  4.2126e-05],\n",
+       "          [ 2.3305e-05,  3.1673e-05,  2.1263e-05,  ..., -5.0109e-05,\n",
+       "           -4.2999e-05, -3.3507e-05],\n",
        "          ...,\n",
-       "          [ 3.5476e-05,  3.4031e-01, -7.6895e-06,  ...,  1.1853e-05,\n",
-       "           -3.4054e-06, -1.0672e-06],\n",
-       "          [ 5.2918e-06, -2.0609e-05,  2.0310e-05,  ..., -1.5238e+00,\n",
-       "            3.1899e-05,  1.7413e-05],\n",
-       "          [-3.0591e-05, -3.3503e-05, -1.7113e-05,  ...,  1.3181e-06,\n",
-       "            4.5448e-05,  4.7182e-05]]]], device='cuda:0', requires_grad=True)"
+       "          [-1.9304e-05, -3.9526e-05, -5.2703e-05,  ...,  4.2414e-05,\n",
+       "            3.1843e-05, -2.2946e-05],\n",
+       "          [-5.4549e-05, -1.1439e-05,  2.1295e-05,  ...,  1.0176e-05,\n",
+       "            1.5888e-05, -2.2589e-05],\n",
+       "          [ 4.2460e-05,  3.1959e-05, -3.0413e-05,  ...,  6.4272e-07,\n",
+       "           -2.6071e-05, -8.0794e-06]]]], device='cuda:0', requires_grad=True)"
       ]
      },
      "execution_count": 10,
@@ -604,6 +604,23 @@
     "aclp = AudioCLIP(pretrained=f'AudioCLIP/assets/{MODEL_FILENAME}').eval().requires_grad_(False)\n",
     "_, audio = read_data(\"AudioCLIP/demo/images/\", \"AudioCLIP/demo/sound/cutted/\")\n",
     "audio = [audio[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(audio[0]))"
    ]
   },
   {
